# lazymvn

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEBUG_YANK.md  FILE_SIZE_REFACTORING_PLAN.md  FILE_SIZE_REFACTORING_REPORT.md  FILE_SIZE_REPORT.md  FUNCTIONAL_REFACTORING_GUIDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_EXTRACTION_PLAN.md  LIBRARY_STATUS.md  LIVE_CONFIG_RELOAD.md  LOG4J_1X_CONFIG_FIX.md  LOG4J_AGENT_IMPLEMENTATION.md  LOG4J_ASYNC_BUGFIX.md  LOG4J_CUSTOM_FACTORY_FIX.md  LOG4J_DEBUG_DIAGNOSTIC.md  LOG4J_FINAL_SOLUTION.md  LOG4J_FIX_COMPLETE_HISTORY.md  LOG4J_JAVA_TOOL_OPTIONS_FIX.md  LOG4J_SPLITN_BUG.md  LOG_FILTERING_FIX_SPRING_BOOT_1X.md  NEXT_CLEANUP_STEPS.md  NEXT_STEPS_TEST_COVERAGE.md  PACKAGE_COLORING_FIX.md  PHASE1_COMPLETE.md  PHASE4_PROGRESS.md  PHASE5_COMPLETE.md  PROCESS_CLEANUP_SUMMARY.md  PROFILE_ACTIVATION.md  QUICKSTART_LAUNCH_STRATEGY.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_SESSION3.md  (+32 more)
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: main-release.yml  nightly.yml  rust.yml
crates/lazymvn-test-harness/: Cargo.toml
crates/lazymvn-test-harness/src/: lib.rs
crates/lazymvn-test-harness/tests/: config_tests.rs  environment_tests.rs  history_tests.rs  integration_tests.rs  logger_tests.rs  process_tests.rs  spring_boot_1x_integration_tests.rs  spring_boot_tests.rs  utf8_handling_tests.rs
crates/maven-command-builder/: Cargo.toml  README.md
crates/maven-command-builder/examples/: basic_usage.rs
crates/maven-command-builder/src/: builder.rs  executor.rs  lib.rs
crates/maven-java-agent/: Cargo.toml  README.md  build.rs
crates/maven-java-agent/agent/: pom.xml  test-agent.sh
crates/maven-java-agent/src/: builder.rs  config.rs  deployment.rs  error.rs  lib.rs
crates/maven-log-analyzer/: Cargo.toml  README.md
crates/maven-log-analyzer/src/: analysis.rs  lib.rs  parser.rs  patterns.rs
crates/maven-log-colorizer/: Cargo.toml  README.md
crates/maven-log-colorizer/src/: colorizer.rs  lib.rs
demo/: README.md
demo-project/: README.md  mvnw.bak  pom.xml
demo-project/app/: pom.xml
demo-project/module-a/: pom.xml
demo-project/module-b/: pom.xml
demo/multi-module/: .gitignore  MAVEN_SETTINGS.md  QUICKSTART.md  README.md  lazymvn.toml  pom.xml  settings.xml  test-settings.sh
demo/single-module/: .gitignore  README.md  mvnw  pom.xml
docs/: DOC_REORGANIZATION.md  INDEX.md  LOG4J_AUTO_CONFIG.md  PHASE_7.1_PLAN.md  QUICK_WINS.md  README.md  REFACTORING.md  ROADMAP_ANALYSIS.md  ROADMAP_EXECUTIVE_SUMMARY.md  TABS_PROPOSAL.md  TEST_COVERAGE_ANALYSIS.md  YANK_LOGS_SUMMARY.md
docs/archive/: DOCUMENTATION_POLISH_COMPLETE.md  DOCUMENTATION_REORGANIZATION_2025-11-02.md  SESSION_SUMMARY_2025-10-29.md
docs/ideas/: LEGACY_INSIGHTS.md  ROADMAP_INDEX.md
docs/internal/: AGENTS.md  AGENT_DIRECTORY_MOVED.md  CACHING_IMPLEMENTATION.md  CLEANUP_STATUS_REPORT.md  CUSTOM_FLAGS_IMPLEMENTATION.md  FIX_CTRL_K_CONFLICT.md  FIX_LOG4J_FILTERING.md  FIX_LOG4J_FILTERING_SUMMARY.md  FIX_LOG4J_SUCCESS.md  FIX_PACKAGE_COLORING.md  FIX_PROFILE_LOADING_NEW_TAB.md  FIX_SHARED_STARTER.md  FIX_SPRING_BOOT_1X_JVM_ARGS.md  FIX_SPRING_BOOT_PLUGIN_NOT_FOUND.md  FIX_YANK_DEBUG_LOGS.md  HELP_POPUP_IMPLEMENTATION.md  HISTORY_CONTEXT_SWITCHING.md  HISTORY_DEDUPLICATION.md  JAVA_AGENT_EXTRACTION_COMPLETE.md  JAVA_AGENT_LIBRARY_EXTRACTION.md  LIBRARY_STATUS.md  LIVE_RELOAD_IMPLEMENTATION.md  LOG4J_1X_CONFIG_FIX.md  LOG4J_AGENT_IMPLEMENTATION.md  LOG4J_ASYNC_BUGFIX.md  LOG4J_CONDITION_BUG.md  LOG4J_CUSTOM_FACTORY_FIX.md  LOG4J_DEBUG_DIAGNOSTIC.md  LOG4J_FINAL_SOLUTION.md  LOG4J_FIX_COMPLETE_HISTORY.md  LOG4J_JAVA_TOOL_OPTIONS_FIX.md  LOG4J_SPLITN_BUG.md  LOGGING_BEST_PRACTICES.md  LOG_FILTERING_FIX_SPRING_BOOT_1X.md  LOG_FORMATTING_IMPLEMENTATION.md  README.md  (+21 more)
examples/: README.md  exception_colorization_example.md  lazymvn.toml.custom-flags-example  lazymvn.toml.custom-goals-example  lazymvn.toml.example  lazymvn.toml.logging-example  lazymvn.toml.loglevel-example  lazymvn.toml.spring-properties-example  lazymvn.toml.watch-example  stacktrace_colorization_example.md
scripts/: README.md  test-custom-flags.sh  test-custom-goals.sh  test-debug-report-optimization.sh  test-env.sh  test-harness.sh  test-help-popup.sh  test-history-context.sh  test-history-deduplication.sh  test-live-reload.sh  test-log-rotation.sh  test-log4j-filtering.sh  test-output-priority-layout.sh  test-package-coloring.sh  test-process-cleanup.sh  test-profile-loading.sh  test-refactoring.sh  test-spring-boot-1x-fix.sh  test-starter-isolation.sh  test-windows-args-quoting.sh  test-yank-debug-fix.sh  test_debug_yank.sh  test_yank_logs.sh  test_yank_logs_guide.sh
src/: config.rs  favorites.rs  history.rs  lib.rs  loading.rs  logger.rs  main.rs  maven.rs  maven_tests.rs  project.rs  starters.rs  tui.rs  tui.rs.backup  utils.rs  watcher.rs
tests/: command_tests.rs  custom_flags_tests.rs  detection_tests.rs  launcher_tests.rs  log_rotation_tests.rs  logger_tests.rs  module_tests.rs  platform_tests.rs  profile_loading_tests.rs  profile_tests.rs  purge_command_tests.rs  spring_boot_1x_fix_tests.rs  spring_boot_user_scenario_tests.rs  starters_command_tests.rs  starters_integration_tests.rs  trace_filtering_tests.rs
(+178 files in other folders)
