[package]
name = "lazymvn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
quick-xml = { version = "0.38.3", features = ["serialize"] }
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
regex = "1.11.0"
unicode-width = "0.1.13"
termcolor = "1.4.1"

[dev-dependencies]
tempfile = "3.23.0"
