[package]
name = "lazymvn"
version = "0.3.7"
edition = "2024"
authors = ["Phreno"]
description = "A cross-platform terminal UI for Maven projects"
license = "MIT"
repository = "https://github.com/Phreno/lazymvn"
keywords = ["maven", "tui", "terminal", "build", "java"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
fuzzy-matcher = "0.3"
glob = "0.3"
log = "0.4"
md5 = "0.7"
quick-xml = { version = "0.38", features = ["serialize"] }
ratatui = "0.29"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
unicode-width = "0.1"
xmltree = "0.11"

[dev-dependencies]
tempfile = "3.23"
