[workspace]
members = [".", "crates/maven-log-analyzer", "crates/maven-log-colorizer", "crates/maven-command-builder"]
resolver = "2"

[workspace.dependencies]
regex = "1.11"

[package]
name = "lazymvn"
version = "0.4.0-nightly"
edition = "2024"
authors = ["Phreno"]
description = "A cross-platform terminal UI for Maven projects"
license = "MIT"
repository = "https://github.com/Phreno/lazymvn"
keywords = ["maven", "tui", "terminal", "build", "java"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3.4"
directories = "6.0.0"
dirs = "6.0"
fuzzy-matcher = "0.3"
glob = "0.3"
globset = "0.4"
log = "0.4"
maven-command-builder = { path = "crates/maven-command-builder" }
maven-log-analyzer = { path = "crates/maven-log-analyzer" }
maven-log-colorizer = { path = "crates/maven-log-colorizer" }
md5 = "0.7"
notify = "8.2.0"
notify-rust = "4.11"
quick-xml = { version = "0.38", features = ["serialize"] }
ratatui = "0.29"
regex = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
unicode-width = "0.1"
xmltree = "0.11"

[dev-dependencies]
tempfile = "3.23"

[build-dependencies]
chrono = "0.4"
